# orgwise

./: .gitignore  Cargo.toml  README.md  build.mjs  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  vite.config.ts
raycast/: package.json  raycast-env.d.ts  tsconfig.json
raycast/src/: atom.ts  create.tsx  form.tsx  list.tsx  stop-clocking.ts
src/: backend.rs  base.rs  lib.rs  main.rs  test.rs
src/api/: mod.rs
src/cli/: api_server.rs  environment.rs  fmt.rs  lsp.rs  lsp_server.rs  mod.rs  src_block.rs
src/command/: clocking.rs  create_headline.rs  duplicate_headline.rs  headline_toc.rs  mod.rs  remove_headline.rs  search_heading.rs  src_block_detangle.rs  src_block_execute.rs  src_block_tangle.rs  update_headline.rs  utils.rs
src/command/clocking/: mod.rs  start.rs  status.rs  stop.rs
src/command/formatting/: blank_lines.rs  list.rs  mod.rs  rule.rs
src/command/headline/: create.rs  duplicate.rs  generate_toc.rs  mod.rs  remove.rs  search.rs  update.rs
src/command/src_block/: detangle.rs  execute.rs  mod.rs  tangle.rs
src/common/: mod.rs  search_heading.rs
src/lsp/: code_lens.rs  completion.rs  document_link.rs  document_symbol.rs  execute_command.rs  folding_range.rs  formatting.rs  initialize.rs  mod.rs  org_document.rs  org_server.rs  references.rs  resolve.rs  semantic_token.rs
src/lsp/commands/: headline_toc.rs  mod.rs  src_block_detangle.rs  src_block_execute.rs  src_block_tangle.rs
src/utils/: clocking.rs  headline.rs  mod.rs  src_block.rs  text_size.rs  timestamp.rs
src/wasm/: backend.rs  lsp_backend.rs  mod.rs
vscode/: README.md  build.mjs  package.json  tsconfig.json
vscode/src/: extension.ts  lsp-server.ts  lsp-worker.ts  orgwise.ts  preview-html.ts  syntax-tree.ts  web-panel.ts  webview.ts
vscode/syntaxes/: org.tmLanguage.json
web/: index.html  package.json  tailwind.config.mjs  tsconfig.json  vite.config.mts
web/src/: App.tsx  CalendarDay.tsx  Table.tsx  Tasks.tsx  atom.ts  command.ts  fetch.ts  main.tsx
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/src/: lib.rs  main.rs
web/src/components/: HeadlineDialog.tsx  clocking.tsx  headline-dialog.tsx
web/src/components/ui/: context-menu.tsx
web/src/lib/: utils.ts
