[package]
name = "orgwise"
version = "0.0.0"
authors = ["PoiScript <poiscript@gmail.com>"]
repository = "https://github.com/PoiScript/orgwise"
edition = "2021"
license = "MIT"
description = "Language server for org-mode files, builtin with orgize."
exclude = ["editors", "pkg"]

[workspace]
members = [".", "./web/src-tauri"]

[dependencies]
orgize = { version = "0.10.0-alpha.8", default-features = false, features = [
    "chrono",
] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
resolve-path = "0.1"
memchr = "2.6"
lsp-types = { version = "0.94.1", features = ["proposed"] }
jetscii = "0.5.3"
nom = "7.1.3"
chrono = { version = "0.4.34", features = ["serde"] }

wasm-bindgen = { version = "0.2.89", features = ["std"], optional = true }
serde-wasm-bindgen = { version = "0.6.3", optional = true }
wasm-bindgen-futures = { version = "0.4.39", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.68", features = ["console"], optional = true }

dashmap = { version = "5.1", features = ["raw-api"], optional = true }
tokio = { version = "1.35.1", features = ["fs", "full"], optional = true }
tower-lsp = { version = "0.20.0", features = ["proposed"], optional = true }
tempfile = { version = "3.8.1", optional = true }
dirs = { version = "5.0.1", optional = true }
clap = { version = "4.4.11", features = ["derive"], optional = true }
clap-verbosity-flag = { version = "2.1.0", optional = true }
axum = { version = "0.6", optional = true }
tower-http = { version = "0.4", features = ["cors"], optional = true }
log = { version = "0.4.21", optional = true, features = ["std"] }
notify = { version = "6.1.1", optional = true, default-features = false, features = [
    "macos_fsevent",
] }

[features]
default = ["wasm", "tower"]
wasm = [
    "wasm-bindgen",
    "serde-wasm-bindgen",
    "wasm-bindgen-futures",
    "console_error_panic_hook",
    "web-sys",
]
tower = [
    "tokio",
    "tower-lsp",
    "tempfile",
    "dirs",
    "axum",
    "tower-http",
    "clap",
    "clap-verbosity-flag",
    "log",
    "notify",
    "dashmap",
]

[lib]
required-features = ["wasm"]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "orgwise"
path = "src/main.rs"
