[package]
name = "orgwise-tauri"
version = "0.0.0"
edition = "2021"

[lib]
name = "orgwise_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
orgwise = { path = "../.." }

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
